# machine-learning

./: README.md  makemore.ipynb  makemore_mlp.ipynb  makemore_p2.py  pyproject.toml
makemore/: makemore-p3.ipynb  makemore.ipynb  makemore_mlp.ipynb  makemore_p2.py
